reflectapi-demo/tests/errors/invalid_reflect_field_type_trait.stderr
error[E0277]: the trait bound `dyn MyTrait: Input` is not satisfied
 --> tests/errors/invalid_reflect_field_type_trait.rs:7:12
  |
7 |     field: dyn MyTrait,
  |            ^^^^^^^^^^^ the trait `Input` is not implemented for `dyn MyTrait`
  |
  = help: the following other types implement trait `Input`:
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
            (A, B, C, D, E, F, G, H)
          and $N others
